--- a/tutorials/tutorials.ipynb
+++ b/tutorials/tutorials.ipynb
@@ -1361,6 +1361,41 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Defining the Class**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Character:\n",
+    "    \"\"\"\n",
+    "    This is a class that rerpesents the player character.\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Defining the Init Function**\n",
+    "\n",
+    "#### Key Points\n",
+    "> The __init__ method creates our attributes (variables) and set them to default values. <br>\n",
+    "> Any function in a class is called a method. <br>\n",
+    "> The initialization method is a magic method. <br>\n",
+    "> A method is magic if it has surrounded by double underscores. <br>\n",
+    "> The short-name for double underline is dunder, and these magic methods are also known as dunder methods."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1370,7 +1405,39 @@
     "    \"\"\"\n",
     "    This is a class that represents the player character.\n",
     "    \"\"\"\n",
-    "    def __init__(self) -> None:\n",
+    "    def __init__(self):\n",
+    "        \"\"\" This is method that sets up the variables in the object. \"\"\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Defining Class Attributes**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Key Points\n",
+    "\n",
+    "> __init__ is a special method that can also be referred to as a constructor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Character:\n",
+    "    \"\"\"\n",
+    "    This is a class that represents the player character.\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
     "        \"\"\"This is a method that sets up the variables in the object.\"\"\"\n",
     "        self.name = \"\"\n",
     "        self.outfit = \"\"\n",
@@ -1381,8 +1448,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The self. is kind of like the prounoun ***my***. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,8 +1474,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Creating Objects**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1440,6 +1523,85 @@
     "    print(\"His vacation home is in \" + vacation_home_address.city)\n",
     "\n",
     "main()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Using Objects in Function**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Smith\n",
+      "701 N. C Street\n",
+      "Carver Science Building\n",
+      "Indianola, IA 50125\n",
+      "\n",
+      "John Smith\n",
+      "1122 Main Street\n",
+      "Panama City Beach, FL 32407\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_address(address):\n",
+    "    \"\"\" Print an adress to the screen \"\"\"\n",
+    "\n",
+    "    print(address.name)\n",
+    "    # If there is a line1 in the address, print it\n",
+    "    if len(address.line1) > 0:\n",
+    "        print(address.line1)\n",
+    "    # If there is a line 2 in the address, print it\n",
+    "    if len(address.line2) > 0:\n",
+    "        print(address.line2)\n",
+    "    print(address.city + \", \" + address.state + \" \" + address.zip)\n",
+    "\n",
+    "def main():\n",
+    "    # Create an address\n",
+    "    home_address = Address()\n",
+    "\n",
+    "    # Set the fields in the address\n",
+    "    home_address.name = \"John Smith\"\n",
+    "    home_address.line1 = \"701 N. C Street\"\n",
+    "    home_address.line2 = \"Carver Science Building\"\n",
+    "    home_address.city = \"Indianola\"\n",
+    "    home_address.state = \"IA\"\n",
+    "    home_address.zip = \"50125\"\n",
+    "\n",
+    "    # Create another address\n",
+    "    vacation_home_address = Address()\n",
+    "\n",
+    "    # Set the fields in the address\n",
+    "    vacation_home_address.name = \"John Smith\"\n",
+    "    vacation_home_address.line1 = \"1122 Main Street\"\n",
+    "    vacation_home_address.line2 = \"\"\n",
+    "    vacation_home_address.city = \"Panama City Beach\"\n",
+    "    vacation_home_address.state = \"FL\"\n",
+    "    vacation_home_address.zip = \"32407\"\n",
+    "\n",
+    "    print_address(home_address)\n",
+    "    print()\n",
+    "    print_address(vacation_home_address)\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Customizing the Constructor**"
    ]
   },
   {
@@ -1499,6 +1661,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Address Class With the Init Parameters**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -1545,6 +1715,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Typing Attributes**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -1556,6 +1734,72 @@
     "\n",
     "mary = Person()\n",
     "mary.name = 22"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Data Classes**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Address:\n",
+    "    name: str = \"\"\n",
+    "    line1: str = \"\"\n",
+    "    line2: str = \"\"\n",
+    "    city: str = \"\"\n",
+    "    state: str = \"\"\n",
+    "    zip_code: str = \"\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Static Variables**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cat population is: 3\n",
+      "The cat population is: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Cat:\n",
+    "    population = 0\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        Cat.population += 1\n",
+    "\n",
+    "def main():\n",
+    "    cat1 = Cat(\"Pat\")\n",
+    "    cat2 = Cat(\"Pepper\")\n",
+    "    cat3 = Cat(\"Pouncy\")\n",
+    "\n",
+    "    print(\"The cat population is:\", Cat.population)\n",
+    "    print(\"The cat population is:\", cat1.population)\n",
+    "\n",
+    "main()"
    ]
   },
   {
